Fix horizontal scrollbar

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -23,13 +23,14 @@
 
 @media screen and (max-width: 1024px) {
   .cover {
-    width: 100vw;
+    width: calc(100% + 48px*2);
     margin-left: -48px;
   }
 }
 
 @media screen and (max-width: 800px) {
   .cover {
+    width: calc(100% + 24px*2);
     margin-left: -24px;
   }
 }
@@ -42,6 +43,7 @@
 
 @media screen and (max-width: 425px) {
   .cover {
+    width: calc(100% + 16px*2);
     margin-left: -16px;
     background-image: url(../../images/cover_background-mobile.jpg);
   }
