--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -4,13 +4,14 @@
 
 @media screen and (max-width: 800px) {
   .lead__image {
-    width: 100vw;
+    width: calc(100% + 24px*2);
     margin-left: -24px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .lead__image {
+    width: calc(100% + 16px*2);
     margin-left: -16px;
   }
 }
